--- a/Contributors.html
+++ b/Contributors.html
@@ -3824,9 +3824,11 @@
                 "fullname": "Hardik Sharma",
                 "username": "https://github.com/hardik302001"
             },
+                
+                "id": 366,
 
-                "fullname": "Ganzabahl",
-                "username": "https://github.com/Ganzabahl"
+                "fullname": "Aashu Kattel",
+                "username": "https://github.com/aashu-kattel"
             },
 
 
